# python-shukujitsu

./: .dockerignore  .gitignore  Dockerfile  MANIFEST.in  README.md  gpg  index.html  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  stdeb.cfg  test_shukujitsu.py
deb/: .gitignore  InRelease  Packages  Release  Release.gpg  Sources  index.html  python-shukujitsu.list  python-shukujitsu_2020.11.18.post5-1.debian.tar.xz  python-shukujitsu_2020.11.18.post5-1.dsc  python-shukujitsu_2020.11.18.post5-1_all.deb  python-shukujitsu_2020.11.18.post5-1_amd64.buildinfo  python-shukujitsu_2020.11.18.post5-1_amd64.changes  python-shukujitsu_2020.11.18.post5-1_source.buildinfo  python-shukujitsu_2020.11.18.post5-1_source.changes  python-shukujitsu_2020.11.27-1.debian.tar.xz  python-shukujitsu_2020.11.27-1.dsc  python-shukujitsu_2020.11.27-1_all.deb  python-shukujitsu_2020.11.27-1_amd64.buildinfo  python-shukujitsu_2020.11.27-1_amd64.changes  python-shukujitsu_2020.11.27-1_source.buildinfo  python-shukujitsu_2020.11.27-1_source.changes  python-shukujitsu_2020.11.27.post1-1.debian.tar.xz  python-shukujitsu_2020.11.27.post1-1.dsc  python-shukujitsu_2020.11.27.post1-1_all.deb  python-shukujitsu_2020.11.27.post1-1_amd64.buildinfo  python-shukujitsu_2020.11.27.post1-1_amd64.changes  python-shukujitsu_2020.11.27.post1-1_source.buildinfo  python-shukujitsu_2020.11.27.post1-1_source.changes  python-shukujitsu_2020.11.27.post2-1.debian.tar.xz  python-shukujitsu_2020.11.27.post2-1.dsc  python-shukujitsu_2020.11.27.post2-1_all.deb  python-shukujitsu_2020.11.27.post2-1_amd64.buildinfo  (+130 more)
(+278 files in other folders)
