[metadata]
license_file = LICENSE

[install]
optimize = 1

[bdist_rpm]
release = 1
packager = Youhei Sakurai <sakurai.youhei@gmail.com>
requires = python3-dateutil
group = Development/Libraries
build_requires = python3-setuptools
doc_files = LICENSE README.md

[sdist_dsc]
build-depends = python3-setuptools
copyright-file = LICENSE
uploaders = Youhei Sakurai <sakurai.youhei@gmail.com>
with-python2 = False
with-python3 = True
